[package]
name = "agent-bus"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "In-process message bus for agent coordination"
repository = "https://github.com/Osso/agent-bus"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros"] }
